conference/DEIC2022: Adjust For conference
The "For conference" was referring to wrong conference.
This isn't part of slide deck, but visible for users
looking at GitHub version of the org-file.

Signed-off-by: Jesper Dangaard Brouer <brouer@redhat.com>

--- a/conference/DEIC2022/ebpf-intro.org
+++ b/conference/DEIC2022/ebpf-intro.org
@@ -11,7 +11,7 @@
 #+OPTIONS: reveal_width:1600 reveal_height:900
 #+OPTIONS: ^:nil tags:nil toc:nil num:nil ':t
 
-* For conference: Internal NS team tech talk
+* For conference: DEIC 2022                                        :noexport:
 
 This presentation is for the DEIC conference 2022 in Kolding, Denmark:
 https://deic.dk/konference/2022/program-dag-1
