areas/core/xdp_frame03_overhead: Fix spelling of REDIRECT
Signed-off-by: Jesper Dangaard Brouer <brouer@redhat.com>

--- a/areas/core/xdp_frame03_overhead.org
+++ b/areas/core/xdp_frame03_overhead.org
@@ -6,7 +6,7 @@
 
 * veth: xdp buff to frame conversion bouncing
 
-When XDP_REDRECT'ing into veth driver, the peer device can run another XDP
+When XDP_REDIRECT'ing into veth driver, the peer device can run another XDP
 program. Before doing so, the incoming xdp_frame must be converted back to
 the xdp_buff layout.
 
