conference/DEIC2022: Full kernel backports limited to BPF parts
Signed-off-by: Jesper Dangaard Brouer <brouer@redhat.com>

--- a/conference/DEIC2022/ebpf-intro.org
+++ b/conference/DEIC2022/ebpf-intro.org
@@ -198,7 +198,7 @@ https://github.com/xdp-project/bpf-examples/tree/master/pkt-loop-filter
 * eBPF and Red Hat                                                   :export:
 
 We /support eBPF/ on RHEL:
-- Full kernel backports (RHEL 8.7: kernel 5.14, RHEL 9.1: kernel 5.16)
+- Full kernel eBPF backports (RHEL 8.7: kernel 5.14, RHEL 9.1: kernel 5.16)
 - Support for eBPF kernel features, bcc-tools and bpftrace
 
 #+HTML: <div style="font-size: 60%">
