--- a/conference/DrivingIT2022/its-the-latency.org
+++ b/conference/DrivingIT2022/its-the-latency.org
@@ -66,7 +66,7 @@ Colors are choosen via org-mode italic/bold high-lighting:
 #+HTML: <div class="two-column">
 
 #+ATTR_html: :style width: 80%;
-#+CAPTION: High *throughput*
+#+CAPTION: High *bandwidth*
 [[file:bus.jpg]]
 
 #+CAPTION: Low /latency/
@@ -129,6 +129,8 @@ Latency /*cannot be removed*/ it can only be /prevented/!
 
 - Session setup delay
   - *DNS lookups*, TCP handshakes, TLS negotiation
+- Serialisation delay
+  - Time to transfer the data -- *only point affected by bandwidth*
 - Propagation delay
   - Media acquisition, physical distance, (bad) routing, /*queueing delay*/
 - Processing delay
