hints: Adj title to reflect new filename
Signed-off-by: Jesper Dangaard Brouer <brouer@redhat.com>

--- a/areas/hints/xdp_hints_kfuncs02_driver_igc.org
+++ b/areas/hints/xdp_hints_kfuncs02_driver_igc.org
@@ -1,9 +1,9 @@
-#+Title: XDP-hints via kfuncs: Early testing
+#+Title: XDP-hints via kfuncs: For driver igc
 
 * Driver: igc
 
 I implemented metadata XDP hints kfuncs in driver igc.
-As this hardware support timestamping.
+As this hardware supports timestamping.
 
 ** Driver igc: list timestamp types
 
